# react-fast

./: .gitignore
backend/: CHANGELOG.md  __init__.py  main.py  pyproject.toml  readme.md
backend/app/adapters/api_clients/: base_odata_api_client.py  new_odata_api_client.py  odata_api_client.py
backend/app/adapters/http_adapters/: http_client.py
backend/app/application/dtos/: external_data_dto.py
backend/app/application/use_cases/: base_fetch_data.py  fetch_external_data.py  fetch_google_data.py  fetch_json_data.py  fetch_odata_data.py  get_greeting.py
backend/app/domain/entities/: message.py
backend/app/domain/interfaces/: o_data_repository.py
backend/app/domain/interfaces/http_interfaces/: external_service.py
backend/app/infrastructure/database/: o_data_repository.py
backend/app/infrastructure/di/: container.py
backend/app/presentation/api/: api_setup.py
backend/app/presentation/api/rest_controllers/: external_data_controller.py  greeting_controller.py  odata_controllers.py  root_controller.py  (+1 more)
backend/docs/: STUDYME.md  api_documentation.md  deployment_guide.md  development_plan.md  features_imlpementation.md  modules_descriptions.md  optimization_guide.md  project_principles.md  project_review.md  project_structure.md  restructure_plan.md  roadmap.md  security_considerations.md  testing_plan.md  user_guide.md
backend/docs/ignore/: old_code.md
backend/workflows/: external_google_workflow_V2.txt  external_json_workflow_V2.txt  odata_test_workflow_V2.txt  odata_test_workflow_V2_diagram.mmd  root_workflow_V2.txt  root_workflow_V2_diagram.mmd
(+7 files in other folders)
